--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,9 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Week 2 Lab - Structured Web Page</title>
 </head>
+
+
 <body>
+        
 <header>
 <h1>Welcome to Hannah Tikulirekuti Mwale 2021377521 Website</h1>
+<h2> Shadreck Soko 2021422313 </h2>
 <nav>
 <a href="#">Home</a> |
 <a href="#">About</a> |
